# turbolink-libraries

./: .gitmodules  README.md
BuildTools/Linux/: ue5-linux-cross-compile.cmake
Source/abseil/: README.md
Source/abseil/patch/: diff-base-on-2021_03_25.patch  diff-base-on-2023-08-02.patch  diff-base-on-2023_01_25.patch
Source/abseil/test/: CMakeLists.txt  README.md  main.cpp
Source/grpc/: README.md
Source/grpc/patch/: diff-base-on-1.41.0.patch  diff-base-on-1.55.patch  diff-base-on-1.57.patch
Source/grpc/test/: CMakeLists.txt  README.md
Source/grpc/test/greeter/: greeter.grpc.pb.cc  greeter.grpc.pb.h  greeter.pb.cc  greeter.pb.h  greeter.proto  greeter_client.cpp  greeter_server.cpp
Source/grpc/test/hello/: hello.cpp
Source/protobuf/: README.md
Source/protobuf/patch/: diff-base-on-4.23.patch
Source/protobuf/test/: CMakeLists.txt  README.md  main.cpp  person.pb.cc  person.pb.h  person.proto
Source/re2/: README.md
Source/re2/patch/: diff-base-on-20220601.patch
Source/re2/test/: CMakeLists.txt  README.md  main.cpp
